# marc

./: .gitignore  CMakeLists.txt  README.md
lib/stb_image/: CMakeLists.txt
lib/stb_image/src/: stb_image_write.cpp
src/: cmd_options.hpp  grid.hpp  main.cpp  parser.cpp  parser.hpp  reader.hpp  types.hpp  utils.hpp
src/drawing/: draw.hpp  generic.hpp  stb_image.hpp  svg.hpp
src/parsing/: entries.hpp  header.cpp  header.hpp  parser.cpp  parser.hpp  reader.hpp  status.hpp
